--- a/templates/report.html
+++ b/templates/report.html
@@ -169,6 +169,12 @@
                 <div class="card-value" style="margin-top: 15px;">
                     总计：{{ (level_normal or 0) + (level_silver or 0) + (level_gold or 0) }} 人
                 </div>
+<!-- 导出Excel按钮 -->
+<div class="mt-4">
+  <a href="/report/export" class="btn btn-success">
+    <i class="bi bi-download"></i> 导出Excel报表
+  </a>
+</div>
             </div>
         </div>
     </div>
